hphp/test/slow/pseudomain/pseudomain_fatal_side_effect8.php.expectf
Fatal error: Found top-level code in %s/pseudomain_fatal_side_effect8.inc in %s/pseudomain_fatal_side_effect8.php on line 5
